# doctor-ferris

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  injector.rs  lib.rs  main.rs  method.rs  process.rs  types.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  privilege.rs  process.rs
src/platform/linux/methods/: ld_preload.rs  mod.rs  ptrace.rs
src/platform/macos/: mod.rs  privilege.rs  process.rs
src/platform/macos/methods/: dyld_insert.rs  mod.rs  task_inject.rs
src/platform/windows/: mod.rs  privilege.rs  process.rs
src/platform/windows/methods/: apc_injection.rs  loadlibrary.rs  manual_map.rs  mod.rs  ntcreatethread.rs  thread_hijack.rs
test_harness/payload/: Cargo.toml
test_harness/payload/src/: lib.rs
